# CommisionChain-PH

./: .gitignore  README.md  package-lock.json
.github/workflows/: ci.yml
contracts/referral/: Cargo.toml
contracts/referral/src/: lib.rs  test.rs
docs/: ARCHITECTURE.md  DEPLOYMENT.md  HACKATHON.md  PITCH.md  WALKTHROUGH.md
docs/screenshots/: README.md
scripts/: deploy.sh
web/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/referrals/: route.ts
web/src/app/api/referrals/approve/: route.ts
web/src/app/api/referrals/claim/: route.ts
web/src/app/api/referrals/create/: route.ts
web/src/app/commissions/: page.tsx
web/src/app/referrals/: page.tsx
web/src/app/referrals/new/: page.tsx
web/src/app/xlm/: page.tsx
web/src/components/: ApprovalStamp.tsx  ConfettiOverlay.tsx  ContractEventFeed.tsx  CopyableAddress.tsx  LiveRefreshIndicator.tsx  NavBar.tsx  NetworkStatusPill.tsx  PipelineVisualizer.tsx  ReferralForm.tsx  ReferralTable.tsx  StatCard.tsx  Toast.tsx  TransactionOverlay.tsx  WalletConnectButton.tsx  WalletProvider.tsx  WalletSelectModal.tsx
web/src/components/__tests__/: ApprovalStamp.test.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx
web/src/lib/: db-helpers.ts  events.ts  format.ts  status.ts  stellar.ts  supabase.ts  types.ts  use-referrals.ts  useAutoRefresh.ts  useCountUp.ts  utils.ts  wallet.ts
web/src/lib/__tests__/: format.test.ts  status.test.ts
web/supabase/: schema.sql
(+2 files in other folders)
