[package]
name = "referral-contract"
version = "0.1.0"
edition = "2021"
publish = false
description = "CommissionChain PH - Soroban smart contract for escrow-based referral commission payouts"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[features]
testutils = ["soroban-sdk/testutils"]

[dependencies]
soroban-sdk = "=21.1.1"

[dev-dependencies]
soroban-sdk = { version = "=21.1.1", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
strip = "symbols"

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
